--- a/day 3/sign-in.html
+++ b/day 3/sign-in.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Login page</title>
+    <title>Sign-In</title>
   </head>
   <body bgcolor="lightblue">
     <center class="box">
-    <h1>Login page</h1>
+    <h1>Sign-In</h1>
       <br />
     
     <div>
       <form class="padding">
+        <label class="username" for="text" ><b>Username</b></label><br>
+        <input class="inputdesign" type="text" required placeholder= "Username">
+        <br>
+        <br>
         <label class="nopadding" for="mail" ><b>Email</b></label><br>
-        <input class="inputdesign" type="email" hint="email" required placeholder= Email>
-        <i class="glyphicon glyphicon-envelope"></i>
+        <input class="inputdesign" type="email" required placeholder= Email>
+        
         <br>
         <br>
         <label class="password" for="password"><b>Password</b></label><br>
