Added front page and style in File

--- a/day 3/index.html
+++ b/day 3/index.html
@@ -4,30 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="styles/style.css" />
+
     <title>Login page</title>
   </head>
   <body bgcolor="lightblue">
     <center class="box">
-    <h1>Login page</h1>
+      <h1><i class="fa fa-home" class="icon"></i> Sign-In</h1>
       <br />
-    
-    <div>
-      <form class="padding">
-        <label class="nopadding" for="mail" ><b>Email</b></label><br>
-        <input class="inputdesign" type="email" hint="email" required placeholder= Email>
-        <i class="glyphicon glyphicon-envelope"></i>
-        <br>
-        <br>
-        <label class="password" for="password"><b>Password</b></label><br>
-        <input class="inputdesign" type="password" hint="password" required placeholder="Password">
-    </form>
-    </div>
-    <div class="center">
+      <img src="styles/images.jpg" alt="logo" />
+      <div>
+        <form class="padding">
+          <label class="nopadding" for="mail"><b>Email</b></label
+          ><br />
+          <input
+            class="inputdesign"
+            type="email"
+            hint="email"
+            required
+            placeholder="Email"
+          />
+          <i class="glyphicon glyphicon-envelope"></i>
+          <br />
+          <br />
+          <label class="password" for="password"><b>Password</b></label
+          ><br />
+          <input
+            class="inputdesign"
+            type="password"
+            hint="password"
+            required
+            placeholder="Password"
+          />
+        </form>
+      </div>
+      <div class="center">
         <a class="" href="index.html">Login</a>
         <a class="" href="sign-in.html">Sign-In</a>
       </div>
-          
     </center>
   </body>
 </html>
