--- a/day 4/index.html
+++ b/day 4/index.html
@@ -27,8 +27,8 @@
 
     </nav>
     <div class="container-fluid">
-        <div class="row justify-content-center text-center">
-            <div class="col-md-4">
+        <div class="card" width="200px" height="400px">
+            <div id="first">
                 <img src="image/G317.jpg" alt="CASIO" width="200px" heigth="200px">
                 <h5 class="card-title">Casio G-shock GA</h5>
                 <span class="card-text">
@@ -36,8 +36,8 @@
                 </span>
             </div>
         </div>
-        <div class="row justify-content-center text-center">
-            <div class="col-md-4">
+        <div class="card" width="200px" height="400px">
+            <div id="second">
                 <img src="image/realme2.jpg" alt="realme smart watch" width="200px" height="200px">
                 <h5 class="card-title">Realme watch</h5>
                 <span class="card-text">
@@ -45,8 +45,8 @@
                 </span>
             </div>
         </div>
-        <div class="row justify-content-center text-center">
-            <div class="col-md-4">
+        <div class="card" width="200px" height="400px">
+            <div id="third">
                 <img src="image/ImgW.jpg" alt="Redmi watch" width="200px" height="200px">
                 <h5 class="card-title">Redmi watch</h5>
                 <span class="card-text">
